* 2013-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 26779: Reduce log level for htmlunit.jar

* 2013-05-27 - marcus.klein@open-xchange.com

 - US 47575615: Added interface method for counting tasks, using that for folder object count value and added the according acceptance test.

* 2013-05-26 - thorben.betten@open-xchange.com

 - Fix for bug 26737: Added update task to enlarge the UID field of calendar tables
 - Fix for bug 26781: Proper invocation of OXException constructor

* 2013-05-24 - thorben.betten@open-xchange.com

 - Fix for bug 26474: Avoid timeout through initiating 102 Processing interim responses
 - Fix for bug 26479: Accept multiple upload files associated with the same field name
 - Fix for bug 24519: Maintain inlined images during auto-save and forward/reply actions

* 2013-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 26760: Fixed possible ArrayIndexOutOfBoundsException

* 2013-05-07 - marcus.klein@open-xchange.com

 - Fix for bug 26431: Properly accepting not existing value or a JSON null value when setting a user attribute.
 - Fix for bug 25982: Accept context name/identifier as a valid tag name that applies only to associated context

* 2013-05-03 - thorben.betten@open-xchange.com

 - Fix for bug 26373: Sanitize on "delivery=view", too

* 2013-05-02 - thorben.betten@open-xchange.com

 - Fix for bug 26305: Use safe hash calculation to avoid hash collisions

* 2013-04-30 - thorben.betten@open-xchange.com

 - Fix for bug 26244: Fixed XSS injection using utf-16 content type

* 2013-04-30 - marcus.klein@open-xchange.com

 - Fix for bug 24724: Revoked version of org.apache.log4j OSGi bundle to 1.2.13. This version does not split log messages when using
   SyslogAppender. Log messages are truncated by the underlying UDP network traffic. Newer version splits too long log messages which makes
   the log output more unreadable.

* 2013-04-30 - tobias.friedrich@open-xchange.com
