@@ -1,3 +1,7 @@
+* 2013-05-28 - thorben.betten@open-xchange.com
+
+ - Fix for bug 26815: Don't interrupt appender task if not finished
+
 * 2013-05-27 - thorben.betten@open-xchange.com
 
  - Fix for bug 26779: Reduce log level for htmlunit.jar
